--- a/pubs.bib
+++ b/pubs.bib
@@ -11,6 +11,21 @@ misc       :: Miscellaneous
 ignore     :: Papers that should be ignored
 selected   :: Selected papers
 
+@comment{---------------------2019---------------------}
+
+@inproceedings{beckett2018bonsai,
+  title={Efficient verification of network fault tolerance via counterexample-guided refinement}
+  author={  <Nick Giannarakis and Ryan Beckett and Aarti Gupta and Ratul Mahajan and David Walker},
+  booktitle={CAV},
+  month={Jul},
+  year={2019},
+  topics={protocols},
+  URL={papers/cav2019-origami.pdf},
+  resource={<a href=papers/cav2019-full.pdf>Extended version with proofs</a>},
+  acceptancerate={26},
+}
+
+
 @comment{---------------------2018---------------------}
 
 @inproceedings{beckett2018bonsai,
