fix typo in bibtex

--- a/pubs.bib
+++ b/pubs.bib
@@ -14,8 +14,8 @@ selected   :: Selected papers
 @comment{---------------------2019---------------------}
 
 @inproceedings{beckett2018bonsai,
-  title={Efficient verification of network fault tolerance via counterexample-guided refinement}
-  author={  <Nick Giannarakis and Ryan Beckett and Aarti Gupta and Ratul Mahajan and David Walker},
+  title={Efficient verification of network fault tolerance via counterexample-guided refinement},
+  author={Nick Giannarakis and Ryan Beckett and Aarti Gupta and Ratul Mahajan and David Walker},
   booktitle={CAV},
   month={Jul},
   year={2019},
