add hotnets2019 paper

--- a/pubs.bib
+++ b/pubs.bib
@@ -13,7 +13,18 @@ selected   :: Selected papers
 
 @comment{---------------------2019---------------------}
 
-@inproceedings{beckett2018bonsai,
+@inproceedings{beckett2019putting,
+  title={Putting network verification to good use},
+  author={Ryan Beckett and Ratul Mahajan},
+  booktitle={HotNets},
+  month={Nov},
+  year={2019},
+  topics={protocols},
+  URL={papers/hotnets2019-putting.pdf},
+  acceptancerate={20},
+}
+
+@inproceedings{beckett2019bonsai,
   title={Efficient verification of network fault tolerance via counterexample-guided refinement},
   author={Nick Giannarakis and Ryan Beckett and Aarti Gupta and Ratul Mahajan and David Walker},
   booktitle={CAV},
