--- a/pubs.bib
+++ b/pubs.bib
@@ -11,6 +11,19 @@ misc       :: Miscellaneous
 ignore     :: Papers that should be ignored
 selected   :: Selected papers
 
+@comment{---------------------2020---------------------}
+
+@inproceedings{beckett2020shapeshifter,
+  title={Efficient verification of network fault tolerance via counterexample-guided refinement},
+  author={Ryan Beckett and Aarti Gupta and Ratul Mahajan and David Walker},
+  booktitle={POPL},
+  month={Jan},
+  year={2020},
+  topics={protocols},
+  URL={papers/popl2020-shapeshifter.pdf},
+  acceptancerate={27},
+}
+
 @comment{---------------------2019---------------------}
 
 @inproceedings{beckett2019putting,
