--- a/pubs.bib
+++ b/pubs.bib
@@ -13,6 +13,18 @@ selected   :: Selected papers
 
 @comment{---------------------2020---------------------}
 
+@inproceedings{beckett2019putting,
+  title={A general framework for compositional network modeling},
+  author={Ryan Beckett and Ratul Mahajan},
+  booktitle={HotNets},
+  month={Nov},
+  year={2020},
+  topics={protocols},
+  URL={papers/hotnets2020-zen.pdf},
+  acceptancerate={25},
+}
+
+
 @inproceedings{beckett2020shapeshifter,
   title={Efficient verification of network fault tolerance via counterexample-guided refinement},
   author={Ryan Beckett and Aarti Gupta and Ratul Mahajan and David Walker},
