--- a/pubs.bib
+++ b/pubs.bib
@@ -11,6 +11,20 @@ misc       :: Miscellaneous
 ignore     :: Papers that should be ignored
 selected   :: Selected papers
 
+@comment{---------------------2021---------------------}
+
+@inproceedings{beckett2019putting,
+  title={Test coverage metrics for the network},
+  author={Xieyang Xu and Ryan Beckett and Karthick Jayaraman and Ratul Mahajan and David Walker},
+  booktitle={SIGCOMM},
+  month={Aug},
+  year={2021},
+  topics={protocols},
+  URL={papers/sigcomm2021-yardstick.pdf},
+  acceptancerate={23},
+}
+
+
 @comment{---------------------2020---------------------}
 
 @inproceedings{beckett2019putting,
