--- a/pubs.bib
+++ b/pubs.bib
@@ -11,9 +11,24 @@ misc       :: Miscellaneous
 ignore     :: Papers that should be ignored
 selected   :: Selected papers
 
+@comment{---------------------2023---------------------}
+
+@inproceedings{xu2023netcov,
+  title={Test coverage metrics for network configurations},
+  author={Xieyang Xu and Weixin Deng and Ryan Beckett and Ratul Mahajan and David Walker},
+  booktitle={NSDI},
+  month={Apr},
+  year={2023},
+  topics={protocols},
+  URL={papers/nsdi2023-netcov.pdf},
+  acceptancerate={16},
+  resource={<a href=https://github.com/UWNetworksLab/netcov>Code and documentation</a>},
+}
+
+
 @comment{---------------------2021---------------------}
 
-@inproceedings{beckett2019putting,
+@inproceedings{xu2021yardstick,
   title={Test coverage metrics for the network},
   author={Xieyang Xu and Ryan Beckett and Karthick Jayaraman and Ratul Mahajan and David Walker},
   booktitle={SIGCOMM},
@@ -27,7 +42,18 @@ selected   :: Selected papers
 
 @comment{---------------------2020---------------------}
 
-@inproceedings{beckett2019putting,
+@inproceedings{beckett2020shapeshifter,
+  title={Abstract interpretation of distributed network control planes},
+  author={Ryan Beckett and Aarti Gupta and Ratul Mahajan and David Walker},
+  booktitle={POPL},
+  month={Nov},
+  year={2020},
+  topics={protocols},
+  URL={papers/popl2020-shapeshifter.pdf},
+  acceptancerate={27},
+}
+
+@inproceedings{beckett2020zen,
   title={A general framework for compositional network modeling},
   author={Ryan Beckett and Ratul Mahajan},
   booktitle={HotNets},
