Add Batfish lessons paper

--- a/pubs.bib
+++ b/pubs.bib
@@ -13,6 +13,19 @@ selected   :: Selected papers
 
 @comment{---------------------2023---------------------}
 
+@inproceedings{brown2023batfish,
+  title={TLessons from the evolution of the Batfish configuration analysis tool},
+  author={Matt Brown and Ari Fogel and Daniel Halperin and Victor Heohiardi and Ratul Mahajan and Todd Millstein},
+  booktitle={SIGCOMM},
+  month={Sep},
+  year={2023},
+  topics={protocols},
+  URL={papers/sigcomm2023-batfish-lessons.pdf},
+  acceptancerate={22},
+  resource={<a href=https://github.com/batfish>Code and documentation</a>},
+}
+
+
 @inproceedings{xu2023netcov,
   title={Test coverage metrics for network configurations},
   author={Xieyang Xu and Weixin Deng and Ryan Beckett and Ratul Mahajan and David Walker},
@@ -105,7 +118,7 @@ selected   :: Selected papers
 @comment{---------------------2018---------------------}
 
 @inproceedings{beckett2018bonsai,
-  title={Control Plane Compression}, 
+  title={Control Plane Compression},
   author={Ryan Beckett and Aarti Gupta and Ratul Mahajan and David Walker},
   booktitle={ACM SIGCOMM},
   month={Aug},
@@ -117,7 +130,7 @@ selected   :: Selected papers
 }
 
 @inproceedings{calder2018odin,
-  title={Odin: {Microsoft’s} Scalable Fault-Tolerant {CDN} Measurement System}, 
+  title={Odin: {Microsoft’s} Scalable Fault-Tolerant {CDN} Measurement System},
   author={Matt Calder and Manuel Schroder and Ryan Gao and Ryan Stewart and Jitendra Padhye and Ratul Mahajan and Ganesh Ananthanarayanan and Ethan Katz-Bassett},
   booktitle={USENIX NSDI},
   month={Apr},
@@ -130,7 +143,7 @@ selected   :: Selected papers
 @comment{---------------------2017---------------------}
 
 @inproceedings{gember-jackson2017cpr,
-  title={Automatically Repairing Network Control Planes Using an Abstract Representation}, 
+  title={Automatically Repairing Network Control Planes Using an Abstract Representation},
   author={Aaron Gember-Jacobson and Aditya Akella and Ratul Mahajan and Hongqiang Harry Liu},
   booktitle={ACM SOSP},
   month={Oct},
@@ -141,7 +154,7 @@ selected   :: Selected papers
 }
 
 @inproceedings{beckett2017mineweeper,
-  title={A General Approach to Network Configuration Verification}, 
+  title={A General Approach to Network Configuration Verification},
   author={Ryan Beckett and Aarti Gupta and Ratul Mahajan and David Walker},
   booktitle={ACM SIGCOMM},
   month={Aug},
@@ -152,7 +165,7 @@ selected   :: Selected papers
 }
 
 @inproceedings{zhuo2017rail,
-  title={Understanding and mitigating packet corruption in data center networks}, 
+  title={Understanding and mitigating packet corruption in data center networks},
   author={Danyang Zhuo and Monia Ghobadi and Ratul Mahajan and Klaus-Tycho Förster and Arvind Krishnamurthy and Thomas Anderson},
   booktitle={ACM SIGCOMM},
   month={Aug},
@@ -163,7 +176,7 @@ selected   :: Selected papers
 }
 
 @inproceedings{beckett2017propane,
-  title={Network Configuration Synthesis with Abstract Topologies}, 
+  title={Network Configuration Synthesis with Abstract Topologies},
   author={Ryan Beckett and Ratul Mahajan and Jitu Padhye and Todd Millstein and David Walker},
   booktitle={ACM PLDI},
   month={Jun},
@@ -174,7 +187,7 @@ selected   :: Selected papers
 }
 
 @inproceedings{zhuo2017rail,
-  title={{RAIL}: A case for redundant arrays of inexpensive links in data center networks}, 
+  title={{RAIL}: A case for redundant arrays of inexpensive links in data center networks},
   author={Danyang Zhuo and Monia Ghobadi and Ratul Mahajan and Amar Phanishayee and Xuan Kelvin Zou and Hang Guan and Arvind Krishnamurthy and Thomas Anderson},
     booktitle={USENIX NSDI},
   month={Mar},
@@ -331,7 +344,7 @@ selected   :: Selected papers
 @inproceedings{calder2015analyzing,
 	title={Analyzing the performance of an anycast {CDN}},
 	author={Matt Calder and Ethan Katz-Bassett and Ratul Mahajan and Jitu Padhye},
-	booktitle={ACM IMC}, 
+	booktitle={ACM IMC},
   month={Oct},
 	year={2015},
 	topics={astronomy},
@@ -392,7 +405,7 @@ selected   :: Selected papers
   month={May},
   year={2015},
   URL={papers/nsdi2015-batfish.pdf},
-  topics={protocols}, 
+  topics={protocols},
   acceptancerate={20},
   impact={yes},
 }
@@ -440,7 +453,7 @@ selected   :: Selected papers
   year={2014},
   URL={papers/sigcomm2014-ffc.pdf},
   resource={<a href=papers/tr2014-ffc-appendix.pdf>Appendix</a>},
-  topics={sdn}, 
+  topics={sdn},
   acceptancerate={19},
   impact={yes},
 }
@@ -458,7 +471,7 @@ selected   :: Selected papers
 }
 
 @inproceedings{sun2014network,
-   author={Peng Sun and Ratul Mahajan and Jennifer Rexford and Lihua Yuan and Ming Zhang and Ahsan Arefin}, 
+   author={Peng Sun and Ratul Mahajan and Jennifer Rexford and Lihua Yuan and Ming Zhang and Ahsan Arefin},
    title={A network-state management service},
    month={Aug},
    booktitle={ACM SIGCOMM},
@@ -468,7 +481,7 @@ selected   :: Selected papers
    acceptancerate={19},
   impact={yes},
 }
-       
+
 @inproceedings{mysore2014gestalt,
    author={Radhika Niranjan Mysore and Ratul Mahajan and Amin Vahdat and George Varghese},
    title={Gestalt: Fast, unified fault localization for networked systems},
@@ -521,7 +534,7 @@ selected   :: Selected papers
   title={Towards a storage system for connected homes},
   author={Trinabh Gupta and Amar Phanishayee and Jaeyeon Jung and Ratul Mahajan},
   booktitle={Workshop on Large-Scale Distributed Systems and Middleware (LADIS)},
-  month={Nov},  
+  month={Nov},
   year={2013},
   topics={home},
   URL={papers/ladis2013-bolt.pdf},
@@ -544,7 +557,7 @@ selected   :: Selected papers
   title={A provider-side view of Web search response time},
   author={Yingying Chen and Ratul Mahajan and Baskar Sridharan and Zhi-Li Zhang},
   booktitle={ACM SIGCOMM},
-  month={Aug},  
+  month={Aug},
   year={2013},
   topics={diagnosis},
   URL={papers/sigcomm2013-srt.pdf},
@@ -681,7 +694,7 @@ selected   :: Selected papers
   year={2011},
   topics={mobile},
   URL={papers/mobiarch2011-systemsens.pdf},
-  acceptancerate={50},  
+  acceptancerate={50},
 }
 
 @inproceedings{amershi2011cuet,
@@ -761,7 +774,7 @@ selected   :: Selected papers
   month={Aug},
   year={2010},
   topics={misc},
-  URL={papers/sigcomm2010-privacy.pdf},  
+  URL={papers/sigcomm2010-privacy.pdf},
   acceptancerate={12},
 }
 
@@ -849,7 +862,7 @@ selected   :: Selected papers
   title={Wi-Fi networks are underutilized},
   author={Raghavendra, R. and Jitendra Padhye and Ratul Mahajan and Belding, E.},
   month={Aug},
-  year={2009},  
+  year={2009},
   howpublished={MSR technical report MSR-2009-108},
   topics={wireless},
   URL={papers/tr2009-wifi-underutilized.pdf}
