--- a/pubs.bib
+++ b/pubs.bib
@@ -14,7 +14,7 @@ selected   :: Selected papers
 @comment{---------------------2023---------------------}
 
 @inproceedings{brown2023batfish,
-  title={TLessons from the evolution of the Batfish configuration analysis tool},
+  title={Lessons from the evolution of the Batfish configuration analysis tool},
   author={Matt Brown and Ari Fogel and Daniel Halperin and Victor Heohiardi and Ratul Mahajan and Todd Millstein},
   booktitle={SIGCOMM},
   month={Sep},
