Add socc papers

--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,4 @@
+appnets  :: Application networking
 protocols  :: Network verification and high-level programming
 optical    :: Optical networking
 sdn        :: Software-defined networking
@@ -12,6 +13,30 @@ ignore     :: Papers that should be ignored
 selected   :: Selected papers
 
 @comment{---------------------2023---------------------}
+
+
+@inproceedings{zhu2023meshinsight,
+  title={Dissecting Overheads of Service Mesh Sidecars},
+  author={Xiangfeng Zhu and Guozhen She and Bowen Xue and Yu Zhang and Yongsu Zhang and Xuan Kelvin Zou and XiongChun Duan and Peng He and Arvind Krishnamurthy and Matthew Lentz and Danyang Zhuo and Ratul Mahajan},
+  booktitle={SoCC},
+  month={Oct},
+  year={2023},
+  topics={appnets},
+  URL={papers/socc2023-meshinsight.pdf},
+  acceptancerate={31},
+  resource={<a href=https://github.com/UWNetworksLab/meshinsight>Code and documentation</a>},
+}
+
+@inproceedings{chugh2023sia,
+  title={Anticipatory Resource Allocation for ML Training},
+  author={Tapan Chugh and Srikanth Kandula and Arvind Krishnamurthy and Ratul Mahajan and Ishai Menache},
+  booktitle={SoCC},
+  month={Oct},
+  year={2023},
+  topics={appnets},
+  URL={papers/socc2023-sia.pdf},
+  acceptancerate={31},
+}
 
 @inproceedings{brown2023batfish,
   title={Lessons from the evolution of the Batfish configuration analysis tool},
