Add ADN paper and CNSM talk

--- a/pubs.bib
+++ b/pubs.bib
@@ -17,6 +17,17 @@ selected   :: Selected papers
 
 @inproceedings{zhu2023meshinsight,
   title={Dissecting Overheads of Service Mesh Sidecars},
+  author={Xiangfeng Zhu and Weixin Deng and Banruo Liu and Jingrong Chen and Yongji Wu and Tom Anderson and Arvind Krishnamurthy and Ratul Mahajan and Danyang Zhu},
+  booktitle={HotNets},
+  month={Nov},
+  year={2023},
+  topics={appnets},
+  URL={papers/hotnets2023-adn.pdf},
+  acceptancerate={28},
+}
+
+@inproceedings{zhu2023meshinsight,
+  title={Dissecting Overheads of Service Mesh Sidecars},
   author={Xiangfeng Zhu and Guozhen She and Bowen Xue and Yu Zhang and Yongsu Zhang and Xuan Kelvin Zou and XiongChun Duan and Peng He and Arvind Krishnamurthy and Matthew Lentz and Danyang Zhuo and Ratul Mahajan},
   booktitle={SoCC},
   month={Oct},
