--- a/pubs.bib
+++ b/pubs.bib
@@ -12,6 +12,20 @@ misc       :: Miscellaneous
 ignore     :: Papers that should be ignored
 selected   :: Selected papers
 
+@comment{---------------------2024---------------------}
+
+@inproceedings{johnson2024flm,
+  title={Sequence Abstractions for Flexible, Line-Rate Network Monitoring},
+  author={Andrew Johnson and Ryan Beckett and Xiaoqi Chen and Ratul Mahajan and David Walker},
+  booktitle={NSDI},
+  month={Apr},
+  year={2024},
+  topics={protocols},
+  URL={papers/nsdi2024-flm.pdf},
+  acceptancerate={18},
+  resource={<a href=https://github.com/PrincetonUniversity/lucid/tree/SpecRegex>Code</a>},
+}
+
 @comment{---------------------2023---------------------}
 
 
