--- a/pubs.bib
+++ b/pubs.bib
@@ -30,7 +30,7 @@ selected   :: Selected papers
 
 
 @inproceedings{zhu2023meshinsight,
-  title={Dissecting Overheads of Service Mesh Sidecars},
+  title={Application Defined Networking},
   author={Xiangfeng Zhu and Weixin Deng and Banruo Liu and Jingrong Chen and Yongji Wu and Tom Anderson and Arvind Krishnamurthy and Ratul Mahajan and Danyang Zhu},
   booktitle={HotNets},
   month={Nov},
