--- a/pubs.bib
+++ b/pubs.bib
@@ -14,6 +14,18 @@ selected   :: Selected papers
 
 @comment{---------------------2024---------------------}
 
+@inproceedings{xu2024rela,
+  title={Relational Network Verification},
+  author={Xieyang Xu and Yifei Yuan and Zachary Kincaid and Arvind Krishnamurthy and Ratul Mahajan and David Walker and Ennan Zhai},
+  booktitle={SIGCOMM},
+  month={Aug},
+  year={2024},
+  topics={protocols},
+  URL={papers/sigcomm2024-rela.pdf},
+  acceptancerate={17},
+  resource={<a href=https://github.com/alibaba/rela>Code</a>},
+}
+
 @inproceedings{johnson2024flm,
   title={Sequence Abstractions for Flexible, Line-Rate Network Monitoring},
   author={Andrew Johnson and Ryan Beckett and Xiaoqi Chen and Ratul Mahajan and David Walker},
