Add sigcomm talks

--- a/pubs.bib
+++ b/pubs.bib
@@ -24,6 +24,7 @@ selected   :: Selected papers
   URL={papers/sigcomm2024-rela.pdf},
   acceptancerate={17},
   resource={<a href=https://github.com/alibaba/rela>Code</a>},
+  impact={yes},
 }
 
 @inproceedings{johnson2024flm,
@@ -85,6 +86,7 @@ selected   :: Selected papers
   URL={papers/sigcomm2023-batfish-lessons.pdf},
   acceptancerate={22},
   resource={<a href=https://github.com/batfish>Code and documentation</a>},
+  impact={yes},
 }
 
 
@@ -112,6 +114,7 @@ selected   :: Selected papers
   topics={protocols},
   URL={papers/sigcomm2021-yardstick.pdf},
   acceptancerate={23},
+  impact={yes},
 }
 
 
@@ -137,6 +140,7 @@ selected   :: Selected papers
   topics={protocols},
   URL={papers/hotnets2020-zen.pdf},
   acceptancerate={25},
+  impact={yes},
 }
 
 
@@ -200,6 +204,7 @@ selected   :: Selected papers
   topics={astronomy},
   URL={papers/nsdi2018-odin.pdf},
   acceptancerate={16},
+  impact={yes},
 }
 
 @comment{---------------------2017---------------------}
